Remove width from header to prevent overflow

--- a/CounterspaceWeaponsTimeline/src/scss/layout/_layout.scss
+++ b/CounterspaceWeaponsTimeline/src/scss/layout/_layout.scss
@@ -32,7 +32,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100vw;
   max-width: $size__max-width;
   margin-right: 1rem;
   margin-bottom: rem(36px);
